# Iris

./: .gitignore  README.md  pyproject.toml  setup.py
src/Iris/: MC.py  __init__.py  bijectors.py  catalogs.py
test/: example.ipynb  get_filters.py  test.py
